--- a/pokemon/css/test.css
+++ b/pokemon/css/test.css
@@ -72,9 +72,9 @@ body {
     margin-right: 2rem;
 }
 
-.sprite-container img {
+/* .sprite-container img {
     border-radius: 50%;
-}
+} */
 
 .info {
     text-align: left;
